# ziggurat-bin

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README  README.md  ci-local.sh  config.env  toolchain.env
.github/workflows/: build-toolchain.yml  release.yml
payload/: BUILD.bazel
scripts/: build-toolchain.sh  build.sh  ci-release.sh  lib.sh  package-toolchain.sh  package-ziggurat-bin.sh  release.sh  strip-archive-sections.sh  verify-toolchain.sh  zig_source_build.sh
scripts/lib/: cmake_presets.sh  common.sh  downloads.sh  env_guard.sh  git_checkout.sh  install_manifest.sh  runtime_matrix.sh  stages.sh  version_match.sh
scripts/stages/: 00_prepare_dirs.sh  10_fetch_zig.sh  20_fetch_llvm.sh  20_fetch_llvm_iwyu.sh  30_build_bootstrap_llvm.sh  40_build_zig_with_bootstrap.sh  50_disable_host_compilers.sh  60_fetch_mold.sh  70_build_mold.sh  80_build_iwyu.sh  90_collect_dist_sysroot.sh  95_size_optimize.sh  98_validate_payload.sh  99_package.sh
tests/: run-smoke.sh  run.sh  test_bootstrap_llvm_runtimes_stage.sh  test_bootstrap_llvm_stage.sh  test_build_help.sh  test_build_iwyu_stage.sh  test_build_mold_stage.sh  test_build_zig_checkout_layout.sh  test_build_zig_requires_source.sh  test_build_zig_stage.sh  test_build_zig_top_level_binary.sh  test_ci_local_script.sh  test_ci_workflow.sh  test_collect_dist_sysroot_lock_metadata.sh  test_collect_dist_sysroot_metadata.sh  test_collect_dist_sysroot_stage.sh  test_dockerfile_local_ci.sh  test_env_guard_stage.sh  test_fetch_llvm_stage.sh  test_fetch_llvm_stage_iwyu_mismatch.sh  test_fetch_mold_stage.sh  test_fetch_zig_rejects_conflicting_version_and_ref.sh  test_fetch_zig_stage.sh  test_fetch_zig_stage_infers_llvm.sh  test_fetch_zig_stage_infers_llvm_cached_release.sh  test_fetch_zig_stage_latest_release.sh  test_fetch_zig_stage_latest_release_missing.sh  test_fetch_zig_stage_ref_switch.sh  test_fetch_zig_stage_shallow_tag_checkout.sh  test_fetch_zig_version_prefers_tag_over_branch.sh  test_fetch_zig_version_tag_prefix.sh  test_invalid_stage_validation.sh  test_iwyu_not_configurable_stage.sh  test_iwyu_version_mismatch.sh  test_package_stage.sh  test_release_script.sh  test_size_optimize_stage.sh  test_smoke_suite_runner.sh  test_stage_execution.sh  test_stage_registry.sh  (+2 more)
tests/lib/: runner_env.sh
tests/smoke/: test_compile_cpp.sh  test_iwyu.sh  test_mold_link.sh  test_sanitizers.sh  test_tools_present.sh
